--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   I am a Web Developer and linux Systems Administrator. Around 3 years of Experience in
   web development and Linux Systems.  
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://raviteja.gangineni.com" # the base hostname & protocol for your site
+url: "http://raviteja.gangineni.com" # the base hostname & protocol for your site
 twitter_username: rteja91
 github_username:  rteja91
 
