Lot improved- second draft

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Ravi Teja Gangineni
 email: rteja7228@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Full stack development is my final goal as the days progress.
+  Full stack development is my final goal with multiple stacks as the days progress in my life.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://raviteja.gangineni.com" # the base hostname & protocol for your site
 twitter_username: rteja91
